<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorSettingsBackground"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.edu.amu.wmi.wmitimetable.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:text="@string/about_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:id="@+id/aboutAuthors"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/colorTextLight"
        android:layout_below="@+id/aboutVersion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_wmi_timetable"
        android:id="@+id/imageView2"
        android:layout_alignTop="@+id/aboutAppName"
        android:layout_alignRight="@+id/aboutAuthors"
        android:layout_alignEnd="@+id/aboutAuthors" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/aboutAuthorsList"
        android:layout_below="@+id/aboutAuthors"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:text="@string/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutVersion"
        android:textColor="@color/colorTextLight"
        android:layout_below="@+id/aboutAppName"
        android:layout_alignLeft="@+id/aboutAppName"
        android:layout_alignStart="@+id/aboutAppName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutBuildTime"
        android:layout_below="@+id/aboutVersion"
        android:layout_alignLeft="@+id/aboutVersion"
        android:layout_alignStart="@+id/aboutVersion"
        android:textColor="@color/colorTextLight"
        android:text="@string/about_build_time" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutAppName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorTextLight"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

</RelativeLayout>
