<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.amu.wmi.wmitimetable.SettingsActivity"
    android:background="@color/colorSettingsBackground">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerStudy"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt_study"
        android:background="@android:drawable/btn_default"
        android:layout_below="@+id/spinnerYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerGroup"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt_group"
        android:background="@android:drawable/btn_default"
        android:layout_below="@+id/spinnerStudy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Pokaż zajęcia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="showMeetings" />

    <TextView
        android:text="PLAN ZAJEC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/settingsTitle"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        android:textColor="@color/colorSettingsForeground"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Wydział Matematyki i Informatyki UAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="@color/colorSettingsForeground" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerYear"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt_year"
        android:background="@android:drawable/btn_default"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
